test/smoke-test/base/job.yaml
apiVersion: batch/v1
kind: Job
metadata:
  name: smoke-test
spec:
  template:
    spec:
      serviceAccountName: smoke-test-sa
      restartPolicy: Never
      containers:
      - name: smoke-test
        image: alpine:latest
        command: ["/bin/sh"]
        env:
        - name: WEB_BASE_URL
          value: "http://192.168.254.220" #"https://istio-demo-dev.marktaguiad.dev"
        - name: API_BASE_URL
          value: "http://192.168.254.220"
        args:
          - -c
          - |
            apk add --no-cache jq curl

            echo "Listing scripts..."
            ls -l /scripts

            sh /scripts/smoke-test.sh
        volumeMounts:
        - name: script
          mountPath: /scripts
      volumes:
      - name: script
        configMap:
          name: smoke-test-script
