test/smoke-test/base/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
resources:
- job.yaml
- serviceaccount.yaml
- rbac-smoketest-to-backend.yaml

configMapGenerator:
- name: smoke-test-script
  files:
  - configs/smoke-test.sh
