test/smoke-test/base/rbac-smoketest-to-backend.yaml
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: read-write-smoketest-to-backend 
spec:
  selector:
    matchLabels:
      app: backend
  action: ALLOW
  rules:
  - from:
    - source:
        principals: 
        - "cluster.local/ns/demo/sa/smoke-test-sa"
        - "cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"
    to:
    - operation:
        methods: ["GET", "POST", "DELETE", "PUT"]
        paths:
        - "/api/login"
        - "/api/version"
        - "/api/health"
        - "/api/register"
        - "/api/users"
        - "/api/users/*" # delete user
